<resources>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="proceed">Proceed</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account_sign_up">Don\'t have account? <u>Sign Up</u></string>
    <string name="by_signing_in_you_agree_to_our">By signing in, you agree to our</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="before_we_get_started">Before we get started</string>
    <string name="what_s_your_name">What’s your name?</string>
    <string name="what_s_your_email">What’s your Email?</string>
    <string name="create_you_password">Create you password</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_signing_up_you_agree_to_our_privacy_policy">By signing up, you agree to our <u>Privacy Policy</u></string>
    <string name="hi_s">Hi User</string>
    <string name="get_started_desc">In the next screen, we’ll be asking some of the questions to measure your five key personality traits you just need to rate yourself on the basis of below faces. Where;</string>
    <string name="let_s_get_started">Let’s get started</string>
    <string name="big_5_traits_test">Big 5 Traits Test</string>
    <string name="your_personality_test_result">Your Personality Test Result</string>
    <string name="test_result_desc">You are now one step away from getting the unlimited access to video sessions on sleep, stress, wakeup, affirmations and entire library of content.</string>
    <string name="closer_look">Closure Look</string>
    <string name="strongly_disagree">Strongly disagree</string>
    <string name="disagree">Disagree</string>
    <string name="neither_agree_nor_disagree">Neither agree nor disagree</string>
    <string name="agree">Agree</string>
    <string name="strongly_agree">Strongly Agree</string>
    <string name="offer_description">Let us help you in improving just click the claim offer button and then check your email so we can offer you the best offers for you.\n\n\nGo fast! You have 30 minutes to react</string>
    <string name="claim_offer">Claim Offer</string>
    <string name="skip_discounts">Skip Discounts</string>
    <string name="next_step">Next Step</string>
    <string name="validation_enter_name">Please enter name</string>
    <string name="validation_enter_email">Please enter email</string>
    <string name="validation_enter_password">Please enter password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transition_to_sleep">Transition To Sleep</string>
    <string name="skip_to_sleep_enhancer">Start Timer</string>
    <string name="skip_to_wake_program">Wakeup</string>
    <string name="openness">Openness</string>
    <string name="save">Save</string>
    <string name="wake_up_program">Wake Up Program</string>
    <string name="sleep_enhancer">Sleep Enhancer</string>
    <string name="view_all">View all</string>
    <string name="enter_your_discount_code_here">Enter your discount code</string>
    <string name="enter_your_discount_coupon">Enter your discount coupon</string>
    <string name="yourverall_openne_oss_score">Your overall Openness Score</string>
    <string name="low_vs_high_openness">Low vs High Openness</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="choose_a_subscription">choose_a_subscription</string>
    <string name="complete">Please select your subscription plan to complete the registration process</string>
    <string name="payment_">Payment of $37.56 every 12 months.  Cancel anytime.</string>
    <string name="_20_discount_applied">20% DISCOUNT APPLIED</string>
    <string name="monthly">Monthly</string>
    <string name="_3_92_month">$29.90/Month</string>
    <string name="he_yearly_m">The yearly membership gives you unlimited access to video sessions on sleep, stress, wakeup, affirmations and entire library of content.  *You may cancel your subscription at any time.</string>
    <string name="enter_your_discount_code">Enter your Discount Coupon</string>
    <string name="entry_title">Entry Title</string>
    <string name="this_is_my_first_day_with_yuru_i_am_understanding_now_how_can_i_become_happy">This is my first day with YURU. I am understanding now how can I become happy.</string>
    <string name="our_affirmation_video_programme_will_help_you_in_improving_your_daily_routine">Our affirmation video programme will help you in improving your daily routine.</string>
    <string name="more_information">MORE INFORMATION</string>
    <string name="please_share_some_more_information_so_we_can_help_you_the_best">Please Share some more information so we can help you the best.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="grant_overlay_permission_to_play_video_alarm">Grant overlay permission to play video alarm!\nWithout this permission you cant use application.</string>
    <string name="text_low_big">This trait features characteristics such as imagination and insight.1﻿ People who are high in this trait also tend to have a broad range of interests. They are curious about the world and other people and eager to learn new things and enjoy new experiences.

People who are high in this trait tend to be more adventurous and creative. People low in this trait are often much more traditional and may struggle with abstract thinking.</string>
    <string name="text_low_small">This trait features characteristics such as imagination and insight.1﻿ People who are high in this trait also tend to have a broad range of interests. They are curious about the world and other people and eager to learn new things and enjoy new experiences.

People who are high in this trait tend to be more adventurous and creative. People low in this trait are often much more traditional and may struggle with abstract thinking.</string>
    <string name="_1_2_1_2"><![CDATA[1/2 & 1/2]]></string>
    <string name="_1_3_2_3"><![CDATA[1/3 & 2/3]]></string>
    <string name="_2_3_1_3"><![CDATA[2/3 & 1/3]]></string>
    <string name="title_activity_two">ActivityTwo</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!--    <string name="continue">Continue</string>-->

</resources>
