<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/time_to_relax_1" />


            <LinearLayout
                android:id="@+id/ll_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:text="@string/hi_s"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/get_started_desc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:gravity="top">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/GetStartedRate"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:layout_weight="2"
                        android:drawableTop="@drawable/ic_strong_disagree"
                        android:text="@string/strongly_disagree" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/GetStartedRate"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:layout_weight="1.2"
                        android:drawableTop="@drawable/ic_disagree"
                        android:text="@string/disagree" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/GetStartedRate"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:layout_weight="2"
                        android:drawableTop="@drawable/ic_neutral"
                        android:text="@string/neither_agree_nor_disagree" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/GetStartedRate"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_marginEnd="@dimen/_2sdp"
                        android:layout_weight="1.2"
                        android:drawableTop="@drawable/ic_agree"
                        android:text="@string/agree" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/GetStartedRate"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_weight="2"
                        android:drawableTop="@drawable/ic_strong_agree"
                        android:text="@string/strongly_agree" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="Gender"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Spinner
                    android:id="@+id/spinnerGenderGet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="Age"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerGender" />

                <Spinner
                    android:id="@+id/spinnerAgeGet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView23" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGetStarted"
                    android:layout_width="@dimen/_190sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:text="@string/let_s_get_started" />


            </LinearLayout>


            <VideoView
                android:id="@+id/tts_getStarted"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                android:fitsSystemWindows="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_linear"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>